Feb 5 11:29 -- it's the scroll bar on the right side that makes the shift happen-- look and see if there's a way to fix this

--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -55,6 +55,7 @@ table {
 body{
 	background-color: white;
 	min-width: 90%;.
+	zoom: 0.8;
 }
 
 .heading{
@@ -91,6 +92,7 @@ header{
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
+	background-color: blue;
 }
 
 #buttons{
@@ -174,6 +176,8 @@ margin-bottom: 150px;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 	font-size: 25px;
 	line-height: 1.7;
+	background-color: purple;
+	margin-bottom: 50px;
 }
 
 .quotePicLeft{
@@ -183,6 +187,7 @@ margin-bottom: 150px;
 	/* border-color: blue; */
 	margin: 0 auto;
 	margin-bottom: 75px;
+	background-color: green;
 }
 
 .picLeft{
@@ -191,12 +196,12 @@ margin-bottom: 150px;
 
 .textRight{
 	float: right;
-	width: 1249px;
+	width: 1250px;
 	height: 300px;
 }
 
 .actualTextRight{
-	padding: 10px;
+	/* padding: 10px; */
 	text-align: center;
 	margin-top: 100px;
 	font-size: 36px;
@@ -211,6 +216,7 @@ margin-bottom: 150px;
 	margin: 0 auto;
 	/* border-color: red; */
 	margin-bottom: 75px;
+	background-color: yellow;
 }
 
 .picRight{
@@ -219,12 +225,12 @@ margin-bottom: 150px;
 
 .textLeft{
 	float: left;
-	width: 1249px;
+	width: 1250px;
 	height: 300px;
 }
 
 .actualTextLeft{
-	padding: 10px;
+	/* padding: 10px; */
 	text-align: center;
 	margin-top: 100px;
 	font-size: 36px;
@@ -233,13 +239,17 @@ margin-bottom: 150px;
 }
 
 #janus{
-	border-color: green;
+	/* border-color: green; */
 }
 
 .pictureAndBio{
-	padding: 10px;
+	width: 1500px;
+	height: 300px;
+	/* border: dashed; */
+	margin: 0 auto;
+	/* border-color: red; */
 	text-align: center;
-	margin-top: 100px;
+	background-color: red;
 	font-size: 36px;
 	line-height: 1.6;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
